--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <script src='https://vodovi.com/track'></script>
+  <meta name="facebook-domain-verification" content="3bu3fpzvc3cfd3k98e6a7203bw8jvz" />
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
